syntax = "proto3";


package chatroom;

message CreateRoom {
    string roomName = 1;
}
message JoinRoom {
    int32 roomId = 1;
}
message SendChat {
    string message = 1;
}

message Request{
    oneof Packet {
        CreateRoom createRoom = 1;
        JoinRoom joinRoom = 2;
        SendChat sendChat = 3;
    }
}

message CreateRoomResponse {
    int32 roomId = 1;
}
message JoinRoomResponse{
    bool isSuccess = 1;
}
message ReceiveChat {
    string message = 1;
}

message Response{
    oneof Packet {
        CreateRoomResponse createRoomResponse = 1;
        JoinRoomResponse joinRoomResponse = 2;
        ReceiveChat receiveChat = 3;
    }
}

service ChatServer {
    rpc Poker (stream Request) returns (stream Response);
}
